fixed the whitespace issue #1513

--- a/src/Ombi/ClientApp/styles/base.scss
+++ b/src/Ombi/ClientApp/styles/base.scss
@@ -795,3 +795,6 @@ textarea {
 .ui-state-default {
     border: 1px solid $form-color-lighter;
 }
+.ui-treetable tbody td {
+    white-space:inherit;
+}
